--- a/Makefile_sin_bonus
+++ b/Makefile_sin_bonus
@@ -1,22 +1,18 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
+#    Makefile_2                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: frgutier <frgutier@student.42malaga.com>   +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/21 08:40:37 by frgutier          #+#    #+#              #
-#    Updated: 2022/09/25 20:19:37 by frgutier         ###   ########.fr        #
+#    Updated: 2022/09/25 17:44:46 by frgutier         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	 libft.a
+FLAG = -Wall -Wextra -Werror
 
-CC	=	 gcc
-
-CFLAGS	=	 -Werror -Wall -Wextra
-
-AR	=	 ar -rcs
+NAME = libft.a
 
 SRC = ft_atoi.c \
 		  ft_bzero.c \
@@ -53,37 +49,27 @@ SRC = ft_atoi.c \
 		  ft_tolower.c \
 		  ft_toupper.c \
 
-BONUS	 =	ft_lstnew_bonus.c 	\
-			ft_lstadd_front_bonus.c \
-			ft_lstsize_bonus.c \
-			ft_lstlast_bonus.c \
-			ft_lstadd_back_bonus.c \
-			ft_lstdelone_bonus.c \
-			ft_lstclear_bonus.c \
-			ft_lstiter_bonus.c \
-			ft_lstmap_bonus.c	 
+OBJ = $(SRC:.c=.o)
 
-OBJS	 =	$(SRC:%.c=%.o)
+all: $(NAME)
 
-OBJ_BONUS=	$(BONUS:%.c=%.o)
+$(NAME): $(OBJ)
+	@ar rc $(NAME) $(OBJ)
+	@echo "$(NAME) created"
+	@ranlib $(NAME)
+	@echo "$(NAME) indexed"
 
-all	:	$(NAME)
+%.o: %.c
+	@gcc $(FLAG) -c $< -o $@
 
-$(NAME)	: 	$(OBJS) libft.h
-	$(AR) $(NAME) $(OBJS)
+clean:
+	@rm -f $(OBJ)
+	@echo "OBJ deleted"
 
-%.o	:	%.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I.
+fclean: clean
+	@rm -f $(NAME)
+	@echo "$(NAME) deleted"
 
-bonus	:	$(OBJS) $(OBJ_BONUS) libft.h
-	$(AR) $(NAME) $(OBJ_BONUS) $(OBJS)
+re: fclean all
 
-clean	:
-	rm -rf $(OBJS) $(OBJ_BONUS)
-
-fclean	: 	clean
-	rm -rf $(NAME)
-
-re	:	fclean all
-
-.PHONY: clean fclean all re bonus
+.PHONY: all, clean, fclean, re
